# ts-gps-navigation

./: README.md  main.py  pyproject.toml
filesystem/: TsDirectory.py  TsFile.py  TsFileSystem.py  __init__.py
filesystem/parsers/: ScsFileParser.py  ZipFileParser.py
sectors/: TsRoadItem.py  TsSector.py  __init__.py
structs/: __init__.py  ts_scs.ksy  ts_scs.py  zip.ksy  zip.py
units/: TsCity.py  __init__.py
utils/: StructDataClass.py  __init__.py
